--- a/plumeti/public/stylesheets/cart.css
+++ b/plumeti/public/stylesheets/cart.css
@@ -1,54 +1,48 @@
+@import url('https://fonts.googleapis.com/css?family=Baloo+Paaji+2&display=swap');
+
 *{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-};
-
-section.container {
-        padding: 50px 0 50px 0;
-        width: 100%;
-        margin: auto;
-    };
-
-section.container.tabla {
-width: 1000px;
-border: 1px solid #999;
-text-align: center;}
-
-
-.tabla{
-    margin: 10%;
-    
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Baloo Paaji 2';
+    letter-spacing: 3px;
+    color:#404040;
+}
+a:hover{
+    text-decoration: none;
+}
+.navbar-toggler{ border:none; }
+.form-control{ border: none; }
+.relleno{
+    height: 69px;
+    background-color: red;
 }
 
-th{
-    background-color: #e9dfcf;
+#tabla{
+border:1px solid #E9DFCF; 
+text-align:center;
+margin-top:30px;
+font-size:0,5rem;}
+
+
+
+#boton{
+    background-color: #E9DFCF;
+    border: 1px solid white;
+    color:black;
 }
+#boton:hover {
+    background-color: #f7f7f7;}
 
-td, th {
-padding-top: 50px;
-        padding: 20px;
-        text-align: left;
-        color: grey
-     }
+    section{
+        margin:auto;
+    }
+    div.icon{
+        width:30px;
+        height:30px;
+        background:blue;
+    }
 
-th, td {
-    padding-top: 50px;
-    padding-bottom: 50px;
-        border-bottom: 1px solid #999;
-        width: 100%;
-        text-align: center;
-        color: grey;
-     }
-td img{
-    width:25%;
-    border-radius: 10px;
-    box-shadow: 0 0 10px #909090;
-}
-tr:hover {
-background-color: #f7f7f7;
-     }
-     caption {
-        font-weight: bold;
-        font-style: italic;
-     }
 
-    
+
