--- a/plumeti/views/products.ejs
+++ b/plumeti/views/products.ejs
@@ -1,131 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Charset / Viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- Archivos CSS -->
     <link rel="stylesheet" href="/stylesheets/navbar.css">
     <link rel="stylesheet" href="/stylesheets/products.css">
     <link rel="stylesheet" href="/stylesheets/footer.css">
-
     <!-- Archivos javascript -->
     <script src="https://kit.fontawesome.com/eff8b9a252.js" crossorigin="anonymous"></script>
-
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Productos</title>
 </head>
+
 <body>
     <!-- Hoja de estilo para el nav navbar.css -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top w-100 m-0 shadow">
+        <div class="container">
+            <div class="navbar-brand">
+                <img src="/images/logo.svg" height="40px" alt="">
+            </div>
+
+            <i class="fas fa-bars navbar-toggler" data-target="#menu" data-toggle="collapse" type="button"></i>
+                
+            <div class="collapse navbar-collapse" id="menu">
+
+                <input class="form-control " type="text" placeholder="Search" aria-label="Search">
+
+
+                <ul class="navbar-nav ml-auto">
+                    <li class="navbar-item mx-1">
+                        <a href="/home" class="nav-link">Inicio</a>
+                    </li>
+                    <li class="navbar-item mx-1">
+                        <a href="/profile" class="nav-link">Perfil</a>
+                    </li>
+                    <li class="navbar-item mx-1">
+                        <a href="/products" class="nav-link">Productos</a>
+                    </li>
+                    <li class="navbar-item mx-1">
+                        <a href="/cart" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
+                    </li>
+                </ul>                
+            </div>
+        </div>
+    </nav>
 <div class="relleno"></div>
-<nav>
-    <div class="navContainer">
-        <a href="/home">
-            <img id="logo" src="/images/logo.svg" alt="">
-        </a>
-        <input id="buscador" type="search" value="" placeholder="Buscar">
-
-        <ul type="none">
-            <li><a href="/home">Inicio</a></li>
-            <li><a href="/profile">Perfil</a></li>
-            <li><a href="/products">Productos</a></li>
-        </ul>
-        <a href="/cart"><i class="fas fa-shopping-cart"></i></a>
-    </div>
-</nav>
     <!-- Hasta aca llega el menu de navegacion -->
+    <!-- Aca comienzan los productos-->
+    <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="navBar">
+                        <ul class="text-center my-3">Ordenar por</li>
+                            <li class="text-center my-3"><a href=#>Categoria</a></li>
+                            <li class="text-center my-3"><a href=#>Tamaño</a></li>
 
-<!-- Aca comienzan los productos-->
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-9">
+            
 
-<div id="contenedorGeneral">
-<section id="left">
-        <div class="navBar">
-            <ul>Ordenar por:
-            <a href=#>
-                <li>Categoria</li>
-            </a>
-            <a href=#>
-                <li>Tamaño</li>
-            </a>
-
-            </ul>
-        </div>
-        
-        <!-- Aca comienzan los productos-->
-</section>
-<section id="right">
-            <section class="product-container"><!-- Contenedor de todos los productos -->
-                <article class="producto"><!-- Contenedor de cada producto -->
-                    <img class="main-photo" src="/images/Boquitas pintadas mostrado.heic" alt="">
-                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
-                </article>
-                <article class="producto">
-                    <img class="main-photo" src="/images/Afra azul mostrado.HEIC" alt="">
-                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
-                </article>
-                <article class="producto">
-                    <img class="main-photo" src="/images/Alegria amarilla mostrado.heic" alt="">
-                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
-                </article>
-                <article class="producto">
-                    <img class="main-photo" src="/images/Cala azul mostrado.heic" alt="">
-                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
-                </article>
-
-                <article class="producto">
-                    <img class="main-photo" src="/images/Jardin estrellado naranja mostrado.heic" alt="">
-                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
-                </article>
-                <article class="producto">
-                    <img class="main-photo" src="/images/Jardin estrellado naranja mostrado.heic" alt="">
-                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
-                    </article>
- 
-             
-        </div>    
-</section>
-</div>
-    </article>
-<footer>
-        <h2 id="contact">Contactanos</h2>
-
-        <div class="footerSeparator">
-            <div id="left">
-                <form action="index.html" method="POST">
-                    <input type="text" id="nombre" placeholder="Nombre">
-                    <input type="tel" id="telefono" placeholder="Telefono">
-                    <input type="email" id="correo" placeholder="Correo">
-                    <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Mensaje"></textarea>
-                    <input type="submit" id="enviar" value="Enviar">
-                </form>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
+                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
+                            <h4 class="text-center my-2">Nombre del producto</h3>
+                            <p class="text-center">$300</span>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
+                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
+                            <h4 class="text-center my-2">Nombre del producto</h3>
+                            <p class="text-center">$300</span>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
+                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
+                            <h4 class="text-center my-2">Nombre del producto</h3>
+                            <p class="text-center">$300</span>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
+                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
+                            <h4 class="text-center my-2">Nombre del producto</h3>
+                            <p class="text-center">$300</span>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
+                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
+                            <h4 class="text-center my-2">Nombre del producto</h3>
+                            <p class="text-center">$300</span>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
+                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
+                            <h4 class="text-center my-2">Nombre del producto</h3>
+                            <p class="text-center">$300</span>
+                        </div>
+                    </div>
+                </div>
             </div>
+    </div>
+    <footer class="">
+        <div class="container">
+            
+            <div class="row d-flex justify-content-between">
+
+                <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">© Plumeti 2020</span>
 
 
-            <div id="right">
-                <ul>
-                    <li><a href="https://www.instagram.com/plumetiTEXTIL/"><i class="fab fa-instagram"></i> 
-                        PlumetiTEXTIL
-                    </a></li>
-
-                    <li><a href="https://www.facebook.com/PlumetiDeco/"><i class="fab fa-facebook-square"></i> 
-                        PlumetiDeco
-                    </a></li>
-
-                    <li><a href="mailto:clariric@gmail.com"><i class="fas fa-envelope"></i> 
-                        clariric@gmail.com
-                    </a></li>
-                    
-                    <li><a href="https://api.whatsapp.com/send?phone=5491167467772&text=&source=&data="><i class="fab fa-whatsapp"></i> 
-                        +54 9 11 6746-7772
-                    </a></li>
-                </ul>
+                <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">
+                    <a href="">
+                        <i class="ml-3 fab fa-facebook-f"></i>
+                    </a>
+                    <a href="">
+                        <i class="ml-3 fab fa-instagram"></i>
+                    </a>
+                    <a href="">
+                        <i class="ml-3 fab fa-whatsapp"></i>
+                    </a>
+                    <a href="">
+                        <i class="ml-3 fas fa-envelope"></i>
+                    </a>
+                </span>
             </div>
         </div>
-</footer>
+    </footer>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 </html>
