--- a/plumeti/views/login.ejs
+++ b/plumeti/views/login.ejs
@@ -12,6 +12,7 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="/stylesheets/home.css">
+    <link rel="stylesheet" href="/stylesheets/login.css">
 
     <!--Javascript-->
     <script src="/javascripts/parallax.js"></script>
@@ -50,12 +51,14 @@
         </div>
     </div>
 </nav>
+
+<div class="relleno"></div>
 <!-- Hasta aca llega el menu de navegacion -->
 <div class="container">
   <div class="row justify-content-center py-4">      
-        <img class= "col-lg-3 col-md-6 col-sm-12 product mt-5 w-100" src="/images/login.png" alt=""></div>
+        <img class= " col-sm-3 m-auto col-md-3 product mt-5 w-100" src="/images/login.png" alt=""></div>
        
-    </div>
+</div>
     <h2 class="text-center">Iniciar sesión</h2>
     <div class="row justify-content-center">
    
