--- a/plumeti/public/stylesheets/admproducts.css
+++ b/plumeti/public/stylesheets/admproducts.css
@@ -1,114 +1,30 @@
-*{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-};
+#img-agregar-productos .imgproductos .img {
 
-section.container {
-    width: 80%;
-    background-color: black;
-    height: 700px;
+    height: 300px;
+    border: 1px dashed black;
 }
 
-.fotoadm  {
-    width: 250px;
-    height: 250px;
-    float: left;
-    border-radius: 10px;
-    box-shadow: 0 0 10px #909090;
-    margin: 20px;
-
-
-}
-
-.fotoadm img {
-    width: 100%;
-}
- 
-
-p button.guardar {
-    border-radius: 10px;
-    background-color: #e9dfcf;
-    float: left;
-    margin: 10px;
-    height: 40px;
-    width: 150px;
+.input-agregar-producto input {
     border: none;
     outline: none;
-   
-    }
-
-p button {
-    border-radius: 10px;
-    float: left;
-    margin: 10px;
-    width: 150px;
-    height: 40px;
-    border: none;
-    outline: none;
-     }
-
-    
-h3 {
-     text-align: left;
-    padding-bottom: 20px;
-    }
-
-button {
-    outline: none;
-    padding: auto;
-       
-      
-    }
-
-input {
-    outline: none;
-    border: none;
-    background-color: transparent;
     border-bottom: 1px solid black;
-    width: 100%;
-           
-    }
+}
 
+.button button {
+background-color:#e9dfcf;
+border-radius: 5px;
+outline:none;
+border:none;
+padding: 10px;
+}
+.button button:last-child {
+    background-color: transparent;
+}
 
-.tabla{
-    margin: 10%;
-background-color: transparent;}
-        
-    
-    
-th{
+#tabla {
     background-color: #e9dfcf;
-    }
-    
-td, th {
-    padding-top: 50px;
-    padding: 20px;
-    text-align: left;
-    color: grey
-         }
-    
-th, td {
-    padding-top: 50px;
-    padding-bottom: 50px;
-     border-bottom: 1px solid #999;
-    width: 100%;
-    text-align: center;
-    color: grey;
-         }
-   
-td img{
-    width:25%;
-    border-radius: 10px;
-    box-shadow: 0 0 10px #909090;
-    }
+}
 
-tr:hover {
-    
-    background-color: #f7f7f7;
-         }
-         
-
-caption {
-    font-weight: bold;
-    font-style: italic;
-         }
-    
+#stock img {
+    height: 2rem;
+}
