--- a/plumeti/public/stylesheets/login.css
+++ b/plumeti/public/stylesheets/login.css
@@ -1,4 +1,6 @@
-*{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
+    button {
+        background-color:#e9dfcf;
+border-radius: 5px;
+outline:none;
+padding: 10px;
+    }
